src/test/deca/context/invalid/Objet/extends_type.des
The extended class  int must be of type class